--- a/public/css/main.css
+++ b/public/css/main.css
@@ -14,17 +14,17 @@ display: inline-block;
 margin-bottom: -5px;
 }
 
-.row{
-  width: 30%;
-  margin: 0 auto;
+.row {
+    width: auto;
+    height: 100px;
 }
 
 .border{
   border: solid 1px black;
 }
 
-.red {
-  background-color: red;
+.purple {
+  background-color: purple;
 }
 
 .blue {
@@ -33,4 +33,13 @@ margin-bottom: -5px;
 
 .green {
   background-color: green;
+}
+
+.row-controls, .col-controls {
+  width: 40%;
+  height: 50px;
+  display: inline-block;
+  font-size: 2em;
+  background-color: red;
+  border-radius: 10px;
 }
